--- a/RadiantArsenal.csproj
+++ b/RadiantArsenal.csproj
@@ -11,10 +11,13 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define &quot;$(DefineConstants)&quot; -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
+    <Compile Remove="Buffs\**" />
     <Compile Remove="Items\Accessories\**" />
     <Compile Remove="Projectiles\NewFolder1\**" />
+    <EmbeddedResource Remove="Buffs\**" />
     <EmbeddedResource Remove="Items\Accessories\**" />
     <EmbeddedResource Remove="Projectiles\NewFolder1\**" />
+    <None Remove="Buffs\**" />
     <None Remove="Items\Accessories\**" />
     <None Remove="Projectiles\NewFolder1\**" />
   </ItemGroup>
@@ -29,8 +32,5 @@
     <Reference Include="Terraria">
       <HintPath>..\..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\tModLoader\tModLoader.exe</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Buffs\" />
   </ItemGroup>
 </Project>
